--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -37,9 +37,8 @@
                   </td>
 
                   <td class="text-center">
-                    <!-- ------------------------ -->
-                    <!-- ADD the DELETE BUTTON HERE -->
-                    <!-- ------------------------ -->
+                    <a href="/books/delete/<%= books[count]._id %>" 
+                      class="btn btn-primary">delete</a>
                   </td>
                 </tr>
                 <% } %>
